# tsvec

./: .gitignore  README.md  pyproject.toml  requirements.txt
ergodic_dataset/bunny/: bunny.ply  bunny_colored.ply
ergodic_dataset/cylinder/: cylinder.ply  cylinder2.ply  cylinder_colored.ply
ergodic_dataset/hand/: hand.ply  hand_colored.ply
ergodic_dataset/mustardbottle/: mustardbottle.ply  mustardbottle_colored.ply
ergodic_dataset/pig/: pig.ply  pig_colored.ply
ergodic_dataset/spot/: spot.ply  spot_colored.ply
ergodic_dataset/torus/: torus.ply  torus_colored.ply
helper/: point_cloud_utils.py
lbfgsb/: __init__.py  param.py  spectral.py
neural_sdf/: __init__.py  checkpoint.py  models.py  training.py
neural_sdf/sdf_jax/: __init__.py  util.py
scripts/: run_tsvec.py  train_sdf.py  visualize_result.py
tsvec/: __init__.py  backend.py  ergodic.py  geometry.py  metric.py  param.py  planner.py  visualize.py
